tests/fixtures/invalid/union_value_used_as_scalar.c
union Number { int value; char tag; };

int main(void) {
    return (union Number){4};
}
